Fixed how far we've come step description width | about us page

--- a/css/main.css
+++ b/css/main.css
@@ -2083,7 +2083,7 @@ footer .copyright {
 .our-history .step .step-description {
     position: absolute;
     left: 38.5%;
-    width: 53%;
+    width: 47%;;
 }
 
 .our-history .step-1 {
