Build the home page timeline in small screens with HTML & CSS instead on image

--- a/css/main.css
+++ b/css/main.css
@@ -501,6 +501,7 @@ header .banner img.artwork-3 {
 }
 
 .our-process .timeline-path-sm {
+    background: #fff;
     width: 4px;
     height: 100%;
     position: absolute;
