--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,11 @@ header {
 header.companies-header {
     height: 600px;
 }
+header.companies-header .container {
+    padding-left: 13.47%;
+    padding-right: 13.47%;
+}
+
 
 header.about-us-header {
     height: auto;
@@ -282,9 +287,10 @@ header.about-us-header .banner h1 {
 }
 
 header.companies-header .banner h1 {
+    width: auto;
     max-width: 736px;
     color: #000;
-    margin-top: 0;
+    margin-top: 140px;
 }
 
 header .banner p {
@@ -379,7 +385,8 @@ header .banner img.artwork-1 {
 header.companies-header .banner img.artwork-1 {
     position: absolute;
     left: 32.81%;
-    top: 276px !important;
+    /* top: 276px !important; */
+    top: 194px !important;
     height: auto;
     width: 879px;
     opacity: 0;
@@ -400,7 +407,7 @@ header .banner img.artwork-2-1 {
 
 header.companies-header .banner img.artwork-2 {
     position: absolute;
-    top: 300px !important;
+    top: 216px !important;
     height: auto;
     width: 629px;
     left: 53.81%;
@@ -2111,6 +2118,119 @@ footer .copyright {
         width: 100%;
         display: block;
     }
+
+    /* Start header | companies page */
+    header.companies-header .banner h1 {
+        margin-top: 40px;
+    }
+    header.companies-header .banner img.artwork-2 {
+        top: 361px !important;
+        left: 13.47%;
+    }
+    /* End header | companies page */
+
+    /* Start Selection process | companies page */
+    .our-process.selection-process .container {
+        padding: 20px;
+    }
+    .our-process.selection-process .title h2 {
+        font-size: 28px;
+        left: 38px;
+    }
+    .our-process.selection-process .title p {
+        font-size: 16px;
+        left: 26px;
+    }
+    .selection-process .company-path {
+        height: auto;
+        width: 100%;
+        position: static;
+        margin-top: 40px;
+    }
+    .our-process.selection-process .step {
+        width: 79% !important;
+    }
+    .our-process.selection-process hr {
+        top: 60px
+    }
+    .selection-process .step-title {
+        font-size: 20px;
+        line-height: 30px;
+    }
+    .selection-process .step-description {
+        font-size: 16px;
+        line-height: 26px;
+    }
+    .our-process.selection-process .step-1 {
+        top: 160px;
+    }
+    .our-process.selection-process .step-1 hr {
+        width: 90%;
+    }
+    .our-process.selection-process .step-2 {
+        top: 316px;
+        width: 689px;
+    }
+    .our-process.selection-process .step-2 hr {
+        width: 73%;
+    }
+    .our-process.selection-process .step-3 {
+        top: 405px;
+    }
+    .our-process.selection-process .step-3 hr {
+        width: 59%;
+    }
+    .our-process.selection-process .step-4 {
+        top: 490px;
+    }
+    .our-process.selection-process .step-4 hr {
+        width: 65%;
+    }
+    .our-process.selection-process .step-5 {
+        top: 510px;
+    }
+    .our-process.selection-process .step-5 hr {
+        width: 65%;
+    }
+    .our-process.selection-process .step-6 {
+        top: 540px;
+    }
+    .our-process.selection-process .step-6 hr {
+        width: 65%;
+    }
+    .our-process.selection-process .step-7 {
+        top: 690px;
+    }
+    .our-process.selection-process .step-7 hr {
+        width: 65%;
+    }
+    /* End Selection process | companies page */
+
+    /* Start How it works | companies page */
+    .how-it-works.companies-how-it-works {
+        padding-top: 40px;
+    }
+    .how-it-works.companies-how-it-works h2 {
+        font-size: 24px;
+        line-height: 34px;
+    }
+    /* End How it works | companies page */
+
+    /* Start Testimonials | companies page */
+    .testimonials.companies-testimonials .customer-img img {
+        max-width: 80%
+    }
+    .testimonials.companies-testimonials .achievements {
+        display: block;
+    }
+    .testimonials.companies-testimonials .achievements .achievement {
+        margin-bottom: 20px;
+    }
+    .testimonials.companies-testimonials .achievements .achievement p {
+        width: 100%;
+        font-size: 16px;
+    }
+    /* End Testimonials | companies page */
 
     /* Start our mission & our story | About us */
     .our-story {
